# Cache-Aware-Scheduling

./: CMakeLists.txt  Makefile  README.md
docs/report/: report_outline.md
docs/slides/: presentation_outline.md
inc/: cache.h  config.h  scenario.h  simulator.h
results/: cache_sensitivity.csv  crpd_peak_pairwise.csv  experiment_results.csv  sched_compare_trace.csv  stress_partitioned.csv  stress_trace.csv
scripts/: plot_pairwise.py  plot_results.py  plot_sensitivity.py  plot_timeline.py  run_experiments.py  run_sensitivity.py
src/: cache.c  main.c  scenario.c  simulator.c
